[gd_scene format=3 uid="uid://dm0k2r4n5p3q1"]

[ext_resource type="Script" uid="uid://by7p83acpdr6f" path="res://scripts/main_menu.gd" id="1_menu"]
[ext_resource type="Texture2D" uid="uid://cfmpacohs3gw6" path="res://assets/main_menu.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://c2e7duja1spvc" path="res://assets/fonts/AmaticSC-Bold.ttf" id="3_font"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_quit"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_quit_pressed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_quit_hover"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_start"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_start_pressed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_start_hover"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_stroop"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_stroop_pressed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_stroop_hover"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_object"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_object_pressed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn_object_hover"]

[node name="MainMenu" type="Control" unique_id=1462287790]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="." unique_id=1962280318]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="QuitButton" type="Button" parent="." unique_id=1943041811]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
offset_left = 56.0
offset_top = 1686.0
offset_right = 253.0
offset_bottom = 1786.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.5, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.8, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn_quit")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn_quit_pressed")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn_quit_hover")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn_quit_hover")
text = "KELUAR"

[node name="HighScoreLabel" type="Label" parent="." unique_id=750179025]
layout_mode = 0
offset_left = 141.0
offset_top = 128.0
offset_right = 741.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 48
text = "Rekor Tertinggi: 0"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="." unique_id=249502190]
custom_minimum_size = Vector2(0, 140)
layout_mode = 0
offset_left = -11.0
offset_top = 107.0
offset_right = 299.0
offset_bottom = 247.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.5, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn_start")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn_start_pressed")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn_start_hover")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn_start_hover")
text = "MODEL KLASIK"

[node name="StroopButton" type="Button" parent="." unique_id=933860415]
custom_minimum_size = Vector2(0, 120)
layout_mode = 0
offset_left = 49.0
offset_top = 320.0
offset_right = 259.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.7, 0.2, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn_stroop")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn_stroop_pressed")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn_stroop_hover")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn_stroop_hover")
text = "STROOP TEST"

[node name="ObjectButton" type="Button" parent="." unique_id=1655294076]
custom_minimum_size = Vector2(0, 120)
layout_mode = 0
offset_left = 31.0
offset_top = 510.0
offset_right = 262.0
offset_bottom = 630.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.1, 0.3, 0.7, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.5, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn_object")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn_object_pressed")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn_object_hover")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn_object_hover")
text = "TEBAK BENDA"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StroopButton" to="." method="_on_stroop_button_pressed"]
[connection signal="pressed" from="ObjectButton" to="." method="_on_object_button_pressed"]
